--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Banana Bread</h1>
+        <img src="https://www.simplyrecipes.com/thmb/1qlP36kzpJIkLq3DR10qjINflcI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Easy-Banana-Bread-LEAD-2-66837beab63c495292d89743c6767171.jpg">
     </body>
 </html>
