--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -7,7 +7,76 @@
     </head>
 
     <body>
+        <!--Sourced from https://www.simplyrecipes.com/recipes/banana_bread/-->
         <h1>Banana Bread</h1>
         <img src="https://www.simplyrecipes.com/thmb/1qlP36kzpJIkLq3DR10qjINflcI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Easy-Banana-Bread-LEAD-2-66837beab63c495292d89743c6767171.jpg">
+        <h2>
+            This banana bread has been the most popular recipe on Simply Recipes for over 10 years. Thousands of people make it every day.
+        </h2>
+        <h3>
+            Ingredients
+        </h3>
+        <ul>
+            <li>                
+                2 to 3 medium (7" to 7-7/8" long) very ripe bananas, peeled (about 1 1/4 to 1 1/2 cups mashed)
+            </li>
+            <li>
+                1/3 cup (76g) butter, unsalted or salted, melted
+            </li>
+            <li>
+                1/2 teaspoon baking soda (not baking powder)
+            </li>
+            <li>
+                1 pinch salt
+            </li>
+            <li>
+                3/4 cup (150g) sugar (1/2 cup if you would like it less sweet, 1 cup if more sweet)
+            </li>
+            <li>
+                1 large egg, beaten
+            </li>
+            <li>
+                1 teaspoon vanilla extract
+            </li>
+            <li>
+                1 1/2 cups (205g) all-purpose flour
+            </li>
+        </ul>
+        <h3>
+            Steps
+        </h3>
+        <ol>
+            <li>
+                Preheat the oven and prepare the pan:
+                Preheat the oven to 350°F (175°C), and butter an 8 x 4-inch loaf pan.
+            </li>
+            <li>
+                Mash the bananas and add the butter:
+                In a mixing bowl, mash the ripe bananas with a fork until completely smooth. Stir the melted butter into the mashed bananas.
+            </li>
+            <li>
+                Smashing bananas to make banana bread.
+                Melted butter added to a bowl of mashed bananas.
+                Mix in the remaining ingredients:
+                Mix in the baking soda and salt. Stir in the sugar, beaten egg, and vanilla extract. Mix in the flour.
+            </li>
+            <li>
+                Sugar mixed with butter and bananas to make banana bread.
+                Flour added to a bowl of wet ingredients to make banana bread.
+                Bake the bread:
+                Pour the batter into your prepared loaf pan.
+            </li>
+            <li>
+                Banana bread batter poured into a loaf pan.
+                Bake for 55 to 65 minutes at 350°F (175°C), or until a toothpick or wooden skewer inserted into the center comes out clean. A few dry crumbs are okay; streaks of wet batter are not. If the outside of the loaf is browned but the center is still wet, loosely tent the loaf with foil and continue baking until the loaf is fully baked.
+            </li>
+            <li>
+                Cool and serve:
+                Remove from oven and let cool in the pan for a few minutes. Then remove the banana bread from the pan and let cool completely before serving. Slice and serve. (A bread knife helps to make slices that aren't crumbly.)
+            </li>
+            <li>
+                Wrapped well, the banana bread will keep at room temperature for 4 days. For longer storage, refrigerate the loaf up to 5 days, or freeze it.
+            </li>
+        </ol>
     </body>
 </html>
