--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <a href="recipes/bananabread.html">Banana Bread</a>
             </li>
             <li>
-
+                <a href="recipes/cake.html">Simple White Cake</a>
             </li>
             <li>
-                
+                <a href="recipes/peanutbuttercookies.html">Peanut Butter Cookies</a>
             </li>
         </ol>
     </body>
