--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <!--Sourced from https://www.simplyrecipes.com/recipes/banana_bread/-->
+        <!--Data sourced from https://www.simplyrecipes.com/recipes/banana_bread/-->
         <h1>Banana Bread</h1>
         <img src="https://www.simplyrecipes.com/thmb/1qlP36kzpJIkLq3DR10qjINflcI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Easy-Banana-Bread-LEAD-2-66837beab63c495292d89743c6767171.jpg">
         <h2>
