Stylesheet added to pages. Basic color scheme

--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width scale=1.0">
+        <link rel="stylesheet" href="../style.css">
         <title>Simple White Cake</title>
     </head>
     <!--Data sourced from https://www.allrecipes.com/recipe/17481/simple-white-cake/ -->
