--- a/recipes/peanutbuttercookies.html
+++ b/recipes/peanutbuttercookies.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width scale=1.0">
+        <link rel="stylesheet" href="../style.css">
         <title>Peanut Butter Cookies</title>
     </head>
     <!--Content sourced from https://www.allrecipes.com/recipe/10275/classic-peanut-butter-cookies/-->
