Image resize. Link style. <ol> styled

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <ol>
-            <li>
-                <a href="recipes/bananabread.html">Banana Bread</a>
-            </li>
-            <li>
-                <a href="recipes/cake.html">Simple White Cake</a>
-            </li>
-            <li>
-                <a href="recipes/peanutbuttercookies.html">Peanut Butter Cookies</a>
-            </li>
-        </ol>
+        <div class="ol-div">
+            <ol>
+                <li>
+                    <a href="recipes/bananabread.html">Banana Bread</a>
+                </li>
+                <li>
+                    <a href="recipes/cake.html">Simple White Cake</a>
+                </li>
+                <li>
+                    <a href="recipes/peanutbuttercookies.html">Peanut Butter Cookies</a>
+                </li>
+            </ol>
+        </div>
     </body>
 </html>
